readme update, demo added. https redirect (htaccess)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#FFFFFF"/>
 	<title>PWA-Basic</title>
-  <link rel="canonical" href="https://i334115.iris.fhict.nl/progressive-web-app-basic/"/>
+  <link rel="canonical" href="https://i334115.hera.fhict.nl"/>
 	<link rel="stylesheet" href="styles/lemonade.min.css">
 	<link rel="stylesheet" href="styles/style.css">
 	<link rel="manifest" href="manifest.json">
