added link to github project on index, readme update

--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
 <body>
   <nav>
      <ul>
-      <h2>
+      <h3>
        <li><a href="#">Home</a></li>
        <li><a href="#">App</a></li>
-       <li><a href="#">Contact</a></li>
-     </h2>
+       <li><a href="https://github.com/paolo-pg/">Contact</a></li>
+     </h3>
    </ul>
  </nav>
+ <div class="content">
+   <h1>Empty Progressive Web App</h1>
+   <h2><a href="https://github.com/paolo-pg/progressive-web-app-basic">Github Project</a></h2>
+ </div>
 
 <script src="scripts/script.js"></script>
 
