--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <nav>
      <ul>
       <h3>
-       <li><a href="#">Home</a></li>
-       <li><a href="#">App</a></li>
-       <li><a href="https://github.com/paolo-pg/">Contact</a></li>
+       <li><a href="https://github.com/paolo-pg/">Project</a></li>
+       <li><a href="https://paolo-pg.github.io/">Manual</a></li>
+       <li><a href="#">Contact</a></li>
      </h3>
    </ul>
  </nav>
